Replace FluentIterable with Java Stream
Change-Id: I85e60de5e153168d357ffe1150999c68ddd75712